--- a/meter-reader/src/main/resources/application.properties
+++ b/meter-reader/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8080
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/readings?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
