--- a/meter-reader/src/main/resources/application.properties
+++ b/meter-reader/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/readings?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=TestUser
+spring.datasource.password=P@ssw0rD
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MeterReadings;integratedSecurity=false
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
